manifests/cob/networkpolicy.yaml
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: jenkins-agent
  namespace: cob
spec:
  serviceAccountSelector: role == 'jenkins-agent'
  types:
    - Ingress
    - Egress
  ingress:
    - metadata:
        annotations:
          from: jenkins-master
          to: jenkins-agent
      action: Allow
      source:
        selector: app.kubernetes.io/component == 'jenkins-master'
        namespaceSelector: projectcalico.org/name == 'jenkins'
  egress:
    - metadata:
        annotations:
          from: jenkins-agent
          to: jenkins-master
      action: Allow
      destination:
        selector: app.kubernetes.io/component == 'jenkins-master'
        namespaceSelector: projectcalico.org/name == 'jenkins'
    - metadata:
        annotations:
          from: jenkins-agent
          to: vpc
      action: Allow
      protocol: TCP
      destination:
        selector: vpc == 'local' && layer == 'all'
        namespaceSelector: global()
        ports:
          - 9042
    - metadata:
        annotations:
          from: jenkins-agent
          to: mgmt
      action: Allow
      protocol: TCP
      destination:
        selector: vpc == 'mgmt' && layer == 'all'
        namespaceSelector: global()
        ports:
          - 443
          - 80
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: cob-application
  namespace: cob
spec:
  types:
    - Egress
  egress:
    - metadata:
        annotations:
          from: cob-application
          to: vpc
      action: Allow
      source:
        serviceAccounts:
          names:
            - tsb-cob
            - default
            - sa-tsb-onboarding-email-sender
            - sa-tsb-onboarding-identity-onfido-download-asset
            - sa-tsb-onboarding-product-data-upload
            - sa-tsb-onboarding-otp-sender
            - tsb-onboarding-api-gateway-ingress-nginx
      protocol: TCP
      destination:
        selector: vpc == 'local' && layer == 'all'
        namespaceSelector: global()
        ports:
          - 9042
          - 9142
          - 9092
          - 7790
          - 2181
          - 7788
          - 8080
          - 9096
          - 8443
          - 3128
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: cob-inter-namespace
  namespace: cob
spec:
  types:
    - Ingress
    - Egress
  ingress:
    - metadata:
        annotations:
          from: cob-namespace
          to: cob-namespace
      action: Allow
      source:
        namespaceSelector: projectcalico.org/name == 'cob'
  egress:
    - metadata:
        annotations:
          from: cob-namespace
          to: cob-namespace
      action: Allow
      protocol: TCP
      destination:
        namespaceSelector: projectcalico.org/name == 'cob'
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: cob-nginx-ingress
  namespace: cob
spec:
  serviceAccountSelector: projectcalico.org/name == 'tsb-onboarding-api-gateway-ingress-nginx'
  types:
    - Ingress
  ingress:
    - metadata:
      annotations:
        from: vpc
        to: nginx
      action: Allow
      source:
        selector: vpc == 'local' && layer == 'all'
        namespaceSelector: global()
---
apiVersion: crd.projectcalico.org/v1
kind: NetworkPolicy
metadata:
  name: cob-application-onprem
  namespace: cob
spec:
  egress:
    - action: Allow
      destination:
        nets:
          - 10.184.90.13/32
          - 10.184.91.16/32
        ports:
          - 8080
          - 8143
          - 3128
          - 80
          - 8443
      metadata:
        annotations:
          from: cob-application
          to: On-Prem
      protocol: TCP
      source:
        serviceAccounts:
          names:
            - tsb-cob
            - default
            - sa-tsb-onboarding-email-sender
            - sa-tsb-onboarding-identity-onfido-download-asset
            - sa-tsb-onboarding-product-data-upload
            - sa-tsb-onboarding-otp-sender
            - tsb-onboarding-api-gateway-ingress-nginx
  types:
    - Egress
